# episteme

./: CMakeLists.txt  Makefile  dev.patch  diff.patch  main.patch
src/: bench.h  evaluate.cpp  evaluate.h  main.cpp  nnue.cpp  nnue.h  search.cpp  search.h  ttable.cpp  ttable.h  uci.cpp  uci.h
src/chess/: core.h  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  zobrist.cpp  zobrist.h
src/engine/chess/: core.h  move.h  movegen.h  perft.cpp  perft.h  position.cpp  position.h
src/engine/evaluation/: evaluate.cpp  evaluate.h  nnue.cpp  nnue.h
src/engine/search/: bench.h  history.h  search.cpp  search.h  stack.h  ttable.cpp
src/engine/uci/: uci.cpp  uci.h
src/evaluate/: evaluate.cpp  nnue.h
src/evaluation/: evaluate.cpp  evaluate.h  nnue.cpp  nnue.h
src/search/: history.h  movepick.cpp  movepick.h  search.cpp  search.h  stack.h  ttable.h
src/uci/: uci.cpp  uci.h
src/utils/: datagen.cpp  datagen.h  format.cpp  format.h
